# discord-bot

./: .gitignore  Cargo.toml  README.md
src/: error_handler.rs  main.rs
src/commands/: mod.rs  status.rs
src/data/: mod.rs  rss.rs  status_page.rs  utils.rs
src/event_handler/: mod.rs
src/event_handler/events/: ready.rs
