[package]
name = "betterstacktest"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
dotenv = "0.15.0"
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
reqwest = "0.12.22"
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros"] }
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
